@@ -1,5 +1,9 @@
 1999-02-19  Tanaka Akira      <akr@jaist.ac.jp>
 
+	* eword-decode.el (mime-decode-header-in-region): Fix typo.
+
+1999-02-19  Tanaka Akira      <akr@jaist.ac.jp>
+
 	* eword-encode.el (eword-encode-field-body): Use
 	`eword-encode-structured-field-body' for "Content-Type" field.
 
